deploy: jordan-clayton/jordan-clayton@58c3893

--- a/contact/index.html
+++ b/contact/index.html
@@ -99,19 +99,19 @@ Contact | Jordan Clayton
     <div>
         <h2 id="contact">Contact:</h2>
 <p>Let&rsquo;s get in touch</p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
+<!-- TODO: Migrate, just embed a google form--> 
+<!-- <form> -->
+<!--     <div> -->
+<!--         <input type="text" id="firstName" name="firstName"/> -->
+<!--         <input type="text" id="lastName" name="lastName"/> -->
+<!--     </div> -->
+<!--     <div> -->
+<!--         <input type="email" id="email" name="email"/> -->
+<!--     </div> -->
+<!--     <div> -->
+<!--         <input type="message" id="message" name="message"/> -->
+<!--     </div> -->
+<!-- </form>> -->
 
     </div>
 </div>
