--- a/cv/index.html
+++ b/cv/index.html
@@ -73,7 +73,162 @@ Resume | Jordan Clayton
     
     
     <div>
-        <h1 id="resume-content-here">Resume content here</h1>
+        <style>
+.split-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.zero-margin{
+    margin: 0;
+}
+
+.half-vert-margin{
+   margin: 1em 0 1em 0;
+}
+
+.subtitle{
+    margin: 1em 0 0 0;
+}
+
+.bullet-grid{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.duped-code-block{
+    font-family: "fira mono", monospace;
+    font-size: 75%;
+    display: block;
+    background: #252627;
+    padding: 10px;
+    overflow: auto;
+}
+
+ul {
+    list-style-type: "- ";
+    padding-left: 10px;
+}
+
+</style>
+<p><a href="/pdf/jordan_clayton_current_resume.pdf">Complete Resume (pdf)</a></p>
+<h4 id="technical-skills">Technical Skills</h4>
+<pre tabindex="0"><code>Languages | Dart, C, Rust, Java, Python, Bash, SQL
+
+Tooling | Vim, VSCode, Android Studio
+
+Technologies | Linux, Flutter, Supabase, GitHub, Pandas, WordPress, LaTeX
+</code></pre><h4 id="education">Education</h4>
+<div class="split-header">
+    <h5 class="zero-margin">Honors Bachelor of Science (BSc): Computer Science</h5>
+    <h5 class="zero-margin">Sep. 2022 - Exp. 2027</h5>
+</div>
+<div>
+    <h5 class="half-vert-margin">
+    <em>
+    Toronto Metropolitan University (Formerly Ryerson)
+    </em>
+    </h5>
+</div>
+<div class="duped-code-block">
+    <ul class="zero-margin">
+        <li>CGPA: 4.17 / 4.33</li>
+        <li class="half-vert-margin">Alumni Award: Best combined performance in CPS 213 and CPS 310 <br />(Computer Organization I & II, awarded 2024)</li>
+       <li>Dean's List (2022-2023)</li>
+    </ul>
+</div>
+<h4 id="relevant-coursework">Relevant Coursework</h4>
+<div class="duped-code-block">
+    <div class="bullet-grid">
+    <!-- Odd rows need zero margin -->
+        <ul class="zero-margin">
+            <li>
+                Object-Oriented Programming
+            </li>
+        </ul>
+        <ul class="zero-margin">
+            <li>
+               Unix & C Programming 
+            </li>
+        </ul>
+        <ul>
+            <li>
+                Data Structures & Algorithms
+            </li>
+        </ul>
+        <ul>
+            <li>
+                Computer Architecture & Organization
+            </li>
+        </ul>
+        <ul class="zero-margin">
+            <li>
+                Comparative Programming Languages
+            </li>
+        </ul>
+    </div>
+</div>
+<h4 id="work-experience">Work Experience</h4>
+<div class="split-header">
+    <h5 class="zero-margin">IFS Ontario</h5>
+    <h5 class="zero-margin">Jul. 2023 - Pres.</h5>
+</div>
+<div class="split-header">
+    <h5 class="subtitle">
+    <em>
+    WordPress Development
+    </em>
+    </h5>
+    <h5 class="subtitle">
+    <em>
+    Remote 
+    </em>
+    </h5>
+</div>
+<div class="duped-code-block">
+    <ul class="zero-margin">
+        <li>
+            Successfully repaired a WordPress directory platform, 
+            allowing IFS practitioners to list and re-list profiles 
+            for attracting new clients.
+        </li>
+        <li class="half-vert-margin">
+            Redesigned and reimplemented backend structure to decouple 
+            and abstract internal business logic from the end-client, 
+            resulting in a clean, intuitive UX.
+        </li>
+        <li>
+            Implemented login, routing logic, and an internal practitioner 
+            dashboard to define clear separations of concern—resulting in a
+            coherent interface for user account and listing management.
+        </li>
+    </ul>
+</div>
+<h4 id="extracurricular">Extracurricular</h4>
+<div class="split-header">
+    <h5 class="zero-margin">Winter Dataworks Program</h5>
+    <h5 class="zero-margin">Jan. 2023 - Mar. 2023</h5>
+</div>
+<div class="split-header">
+    <h5 class="subtitle">
+    <em>
+    DataQuest Data Analyst for Python
+    </em>
+    </h5>
+    <h5 class="subtitle">
+    <em>
+    Metropolitan Data Science Association
+    </em>
+    </h5>
+</div>
+<div class="duped-code-block">
+    <ul class="zero-margin">
+        <li>
+            9-week Data Science program covering relational databases, 
+            SQL, advanced querying, and web scraping using Python.
+        </li>
+    </ul>
+</div>
 
     </div>
 </div>
